# ChangeLog for media-libs/xine-lib
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.58 2003/07/14 21:51:49 spider Exp $

*xine-lib-1_beta12-r1 (14 Jul 2003)

  14 Jul 2003; <spider@gentoo.org> xine-lib-1_beta12-r1.ebuild:
  USE="gnome" support with a sed hack to disable gnome-vfs, no configure flags
  for it unfortunately

*xine-lib-1_beta12 (12 May 2003)

  13 May 2003; Daniel Robbins <drobbins@gentoo.org> xine-lib-1_beta12.ebuild:
  parallel build failed; forcing -j1. No rev bump.

  12 May 2003; Arcady Genkin <agenkin@gentoo.org> :
  Version bump.

*xine-lib-1_beta11 (29 Apr 2003)

  09 May 2003; Martin Holzer <mholzer@gentoo.org> xine-lib-1_beta10.ebuild,
  xine-lib-1_beta11.ebuild:
  fixed type. closes #20692

  29 Apr 2003; Brandon Low <lostlogic@gentoo.org> xine-lib-0.9.10-r1.ebuild,
  xine-lib-0.9.12-r2.ebuild, xine-lib-0.9.13-r1.ebuild,
  xine-lib-0.9.13-r2.ebuild, xine-lib-0.9.13.ebuild, 
  xine-lib-1_beta6.ebuild, xine-lib-1_beta8.ebuild, xine-lib-1_beta9.ebuild:
  Remove massive amounts of cruft

  29 Apr 2003; Brandon Low <lostlogic@gentoo.org> xine-lib-1_beta11.ebuild:
  A bump, and several ebuild changes. Specifically removed the use of
  flag-o-matic since CFLAGS and CXXFLAGS are unset later in the ebuild to let
  the configure script save us from ourselves, I'd like to find a better
  solution to this eventually since the current setup isn't real good for
  cross-compiling. Also set the ebuild to use emake instead of make, it looks as
  if the xine folks have gotten parallel building fixed, but please test this
  extensively, especially in SMP configurations to confirm.

*xine-lib-1_beta10 (09 Apr 2003)

  15 Apr 2003; Arcady Genkin <agenkin@gentoo.org> :
  Marking stable on x86.

  09 Apr 2003; Arcady Genkin <agenkin@gentoo.org> :
  Version bump.

*xine-lib-1_beta9 (23 Mar 2003)
