@@ -1,7 +1,14 @@
+MD5 daf14fc2061f0ef272a52b17fdd98184 ChangeLog 11913
+MD5 0c25e4e948951f3e9b48689576e11c8c xine-lib-0.9.13-r3.ebuild 3649
+MD5 95573a001053d87b676a03baf8d629c4 xine-lib-1_beta10.ebuild 3447
+MD5 d9b607677afa0313c3cf891dce69252c xine-lib-1_beta11.ebuild 3617
+MD5 14e5a2c7dcd2f1415da0a8509adb7726 xine-lib-1_beta12-r1.ebuild 4153
+MD5 06a27eb18ae37ffa8e7c65919299b1b1 xine-lib-1_beta12.ebuild 3718
+MD5 f1570a69c99207f65b5cdf1d154bbcd4 files/digest-xine-lib-0.9.13-r3 68
+MD5 af33e921f7041fafac652c324d3984c1 files/digest-xine-lib-1_beta10 70
 MD5 5903fa4c80658b8265910c8745913dae files/digest-xine-lib-1_beta11 70
 MD5 8a96afc4d37712253fc7bb3472efbdc4 files/digest-xine-lib-1_beta12 70
 MD5 8a96afc4d37712253fc7bb3472efbdc4 files/digest-xine-lib-1_beta12-r1 70
-MD5 af33e921f7041fafac652c324d3984c1 files/digest-xine-lib-1_beta10 70
 MD5 beea8b4dacbd153e4c6b06e57ee711d2 files/xine-lib-0.9.12-r2-directfb.patch 746
 MD5 279ee4d06acc78adef09fe7ae4a64980 files/xine-lib-0.9.13-kxine.patch 9041
 MD5 0cf698a9ff87a3595140d92df7b900b6 files/xine-lib-configure.patch 342
@@ -9,10 +16,3 @@ MD5 aa54582a91933533008c1211dcbcfb35 files/xine-lib-disable-directfb.patch 4169
 MD5 6e79367c32da81354d36e68fd1a24ae2 files/xineconfig.patch 699
 MD5 dcb0c79c0bb106397aad42f6d936627d files/xineconfig.patch-0.9.12 601
 MD5 dcb0c79c0bb106397aad42f6d936627d files/xineconfig.patch-0.9.13 601
-MD5 f1570a69c99207f65b5cdf1d154bbcd4 files/digest-xine-lib-0.9.13-r3 68
-MD5 06a27eb18ae37ffa8e7c65919299b1b1 xine-lib-1_beta12.ebuild 3718
-MD5 bc2a7797f0c32f1da5f14f5ff493e614 xine-lib-1_beta12-r1.ebuild 4138
-MD5 95573a001053d87b676a03baf8d629c4 xine-lib-1_beta10.ebuild 3447
-MD5 d9b607677afa0313c3cf891dce69252c xine-lib-1_beta11.ebuild 3617
-MD5 e8c460f24a0749c71c7570ad9126f78b xine-lib-0.9.13-r3.ebuild 3641
-MD5 015b2e12e5a3e82f5bae40fe87dd5205 ChangeLog 11767
